[metadata]
name = wbreakpoint
version = 1.0.0
author = Oliver Giles 
author_email = ogiles@email.com
description = Breakpoint as a wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ogiles1999/wbreakpoint
project_urls =
    Bug Tracker = https://github.com/ogiles1999/wbreakpoint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
